# aoc2025

./: Cargo.toml
aoc/src/: lib.rs
day01/: Cargo.toml
day01-2/: Cargo.toml
day01-2/src/: main.rs
day01/src/: main.rs
day01p2/: Cargo.toml
day02/: Cargo.toml
day02/src/: main.rs
day02p2/: Cargo.toml
day02p2/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day03p2/: Cargo.toml
day03p2/src/: main.rs
